kube/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: urturn-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urturn
  template:
    metadata:
      labels:
        app: urturn  
    spec:                  
      containers: 
      - name: urturn-app
        image: gcr.io/urturn-1/urturn-image:latest
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: firebase-admin-sdk-creds
            mountPath: "/opt/firebase-admin-sdk-creds"
            readOnly: true
      volumes:
      - name: firebase-admin-sdk-creds
        secret:
            secretName: firebase-admin-sdk-creds-json
