kube/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: urturn-nodeport
  labels:
    app: urturn
spec:
  type: NodePort
  selector:
    app: urturn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
