kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: urturn
spec:
  type: LoadBalancer
  selector:
    app: urturn
  ports:
  - port: 80
    targetPort: 3000
